CMTYAEM-387 Taxonomy (Tag) Display: Spacing Issue Between Component fix

--- a/ui.frontend/src/main/webpack/components/taxonomy/scss/styles/_default.scss
+++ b/ui.frontend/src/main/webpack/components/taxonomy/scss/styles/_default.scss
@@ -1,5 +1,6 @@
 .cmp-taxonomy {
     margin-top: 32px;
+    margin-left: 32px;
 
     &__item {
         font-style: $font-style-normal;
